fixtures/errors/resolve-alias-outside-module/input.fz
alias Some.Mod
fn main(), do: nil
